--- a/README.org
+++ b/README.org
@@ -179,6 +179,17 @@ await fetch(`http://localhost:8080/chan/${id}`).then(res => res.text())
 }
 #+END_SRC
 
+***** Example
+****** curl
+#+BEGIN_SRC sh
+curl 'http://localhost:8080/stats'
+#+END_SRC
+
+****** JavaScript
+#+BEGIN_SRC js
+await fetch('http://localhost:8080/stats').then(res => res.json())
+#+END_SRC
+
 *** Private
 **** JSON Schema验证
 通过设置环境变量 =CHAN_JSON_VALIDATION=true= 可开启enqueue的JSON验证功能.
