--- a/README.org
+++ b/README.org
@@ -167,8 +167,8 @@ curl "http://localhost:8080/chan/$id"
 await fetch(`http://localhost:8080/chan/${id}`).then(res => res.text())
 #+END_SRC
 
-**** 统计信息
-=GET /stats=
+**** metrics
+=GET /metrics=
 
 输出JSON:
 #+BEGIN_SRC ts
@@ -182,12 +182,12 @@ await fetch(`http://localhost:8080/chan/${id}`).then(res => res.text())
 ***** Example
 ****** curl
 #+BEGIN_SRC sh
-curl 'http://localhost:8080/stats'
+curl 'http://localhost:8080/metrics'
 #+END_SRC
 
 ****** JavaScript
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/stats').then(res => res.json())
+await fetch('http://localhost:8080/metrics').then(res => res.json())
 #+END_SRC
 
 *** Private
